--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,9 @@ body{
     color: #333;
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 #container
 {
@@ -10,4 +13,9 @@ body{
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
+}
+#container h1
+{
+    font-size: 20px;
+
 }
